[package]
name = "garmin_run_tracker"
version = "0.1.0"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2018"
description = "An application to process and store garmin FIT files from runs."
license = "MIT"
repository = "https://github.com/stadelmanma/garmin-run-tracker"
readme = "README.md"
documentation = "https://docs.rs/garmin-run-tracker"
keywords = ["ant", "fit", "garmin"]

[dependencies]
chrono = "0.4"
dirs = "2.0.2"
fitparser = "0.2"
hex = "0.4.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
log = "0.4.8"
rusqlite = { version = "0.23.1", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9.0"
simplelog = "0.8.0"
structopt = "0.3"
