[package]
name = "garmin_run_tracker"
version = "0.2.0"
authors = ["Matthew Stadelman <stadelmanma@gmail.com>"]
edition = "2021"
description = "An application to process and store garmin FIT files from runs."
license = "MIT"
repository = "https://github.com/stadelmanma/garmin-run-tracker"
readme = "README.md"
documentation = "https://docs.rs/garmin-run-tracker"
keywords = ["ant", "fit", "garmin"]

[dependencies]
chrono = "0.4"
crossterm = "0.27.0"
dirs = "5.0"
fitparser = "0.6"
form_urlencoded = "1.2"
garmin_run_tracker_derive = { path = "../garmin_run_tracker_derive" }
hex = "0.4"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "array"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha2 = "0.10"
simplelog = "0.12"
structopt = "0.3"
ratatui = { version = "0.26", default-features = false, features = ['crossterm'] }
